feat(client): leverage auto generate client
