# web/backend/openapi.json
@@ -43,7 +43,135 @@
         ],
         "responses": {
           "200": {
-            "description": "Default Response"
+            "description": "Default Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": false,
+                  "properties": {
+                    "dataMem": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "additionalProperties": false,
+                        "properties": {
+                          "date": {
+                            "type": "string",
+                            "format": "date-time"
+                          },
+                          "rss": {
+                            "type": "number"
+                          },
+                          "totalHeap": {
+                            "type": "number"
+                          },
+                          "usedHeap": {
+                            "type": "number"
+                          },
+                          "newSpace": {
+                            "type": "number"
+                          },
+                          "oldSpace": {
+                            "type": "number"
+                          }
+                        },
+                        "required": [
+                          "date",
+                          "rss",
+                          "totalHeap",
+                          "usedHeap",
+                          "newSpace",
+                          "oldSpace"
+                        ]
+                      }
+                    },
+                    "dataCpu": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "additionalProperties": false,
+                        "properties": {
+                          "date": {
+                            "type": "string",
+                            "format": "date-time"
+                          },
+                          "cpu": {
+                            "type": "number"
+                          },
+                          "eventLoop": {
+                            "type": "number"
+                          }
+                        },
+                        "required": [
+                          "date",
+                          "cpu",
+                          "eventLoop"
+                        ]
+                      }
+                    },
+                    "dataLatency": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "additionalProperties": false,
+                        "properties": {
+                          "date": {
+                            "type": "string",
+                            "format": "date-time"
+                          },
+                          "p90": {
+                            "type": "number"
+                          },
+                          "p95": {
+                            "type": "number"
+                          },
+                          "p99": {
+                            "type": "number"
+                          }
+                        },
+                        "required": [
+                          "date",
+                          "p90",
+                          "p95",
+                          "p99"
+                        ]
+                      }
+                    },
+                    "dataReq": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "additionalProperties": false,
+                        "properties": {
+                          "date": {
+                            "type": "string",
+                            "format": "date-time"
+                          },
+                          "count": {
+                            "type": "number"
+                          },
+                          "rps": {
+                            "type": "number"
+                          }
+                        },
+                        "required": [
+                          "date",
+                          "count",
+                          "rps"
+                        ]
+                      }
+                    }
+                  },
+                  "required": [
+                    "dataMem",
+                    "dataCpu",
+                    "dataLatency",
+                    "dataReq"
+                  ]
+                }
+              }
+            }
           }
         }
       }
@@ -70,7 +198,135 @@
         ],
         "responses": {
           "200": {
-            "description": "Default Response"
+            "description": "Default Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": false,
+                  "properties": {
+                    "dataMem": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "additionalProperties": false,
+                        "properties": {
+                          "date": {
+                            "type": "string",
+                            "format": "date-time"
+                          },
+                          "rss": {
+                            "type": "number"
+                          },
+                          "totalHeap": {
+                            "type": "number"
+                          },
+                          "usedHeap": {
+                            "type": "number"
+                          },
+                          "newSpace": {
+                            "type": "number"
+                          },
+                          "oldSpace": {
+                            "type": "number"
+                          }
+                        },
+                        "required": [
+                          "date",
+                          "rss",
+                          "totalHeap",
+                          "usedHeap",
+                          "newSpace",
+                          "oldSpace"
+                        ]
+                      }
+                    },
+                    "dataCpu": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "additionalProperties": false,
+                        "properties": {
+                          "date": {
+                            "type": "string",
+                            "format": "date-time"
+                          },
+                          "cpu": {
+                            "type": "number"
+                          },
+                          "eventLoop": {
+                            "type": "number"
+                          }
+                        },
+                        "required": [
+                          "date",
+                          "cpu",
+                          "eventLoop"
+                        ]
+                      }
+                    },
+                    "dataLatency": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "additionalProperties": false,
+                        "properties": {
+                          "date": {
+                            "type": "string",
+                            "format": "date-time"
+                          },
+                          "p90": {
+                            "type": "number"
+                          },
+                          "p95": {
+                            "type": "number"
+                          },
+                          "p99": {
+                            "type": "number"
+                          }
+                        },
+                        "required": [
+                          "date",
+                          "p90",
+                          "p95",
+                          "p99"
+                        ]
+                      }
+                    },
+                    "dataReq": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "additionalProperties": false,
+                        "properties": {
+                          "date": {
+                            "type": "string",
+                            "format": "date-time"
+                          },
+                          "count": {
+                            "type": "number"
+                          },
+                          "rps": {
+                            "type": "number"
+                          }
+                        },
+                        "required": [
+                          "date",
+                          "count",
+                          "rps"
+                        ]
+                      }
+                    }
+                  },
+                  "required": [
+                    "dataMem",
+                    "dataCpu",
+                    "dataLatency",
+                    "dataReq"
+                  ]
+                }
+              }
+            }
           }
         }
       }
