# web/backend/routes/root.ts
@@ -2,12 +2,14 @@ import { FastifyInstance } from 'fastify'
 import { JsonSchemaToTsProvider } from '@fastify/type-provider-json-schema-to-ts'
 import { RuntimeApiClient, Runtime } from '@platformatic/control'
 import { getLogsFromReadable } from '../utils/log'
+import { metricResponseSchema } from '../schemas'
 
 type SelectableRuntime = Runtime & { selected?: boolean }
 
 export default async function (fastify: FastifyInstance) {
   const typedFastify = fastify.withTypeProvider<JsonSchemaToTsProvider>()
   const api = new RuntimeApiClient()
+  const emptyMetrics = { dataCpu: [], dataLatency: [], dataMem: [], dataReq: [] }
 
   typedFastify.get('/runtimes', {
     schema: {
@@ -40,18 +42,27 @@ export default async function (fastify: FastifyInstance) {
 
   typedFastify.get('/runtimes/:pid/metrics', {
     schema: {
-      params: { type: 'object', properties: { pid: { type: 'number' } }, required: ['pid'] }
-    }
+      params: { type: 'object', properties: { pid: { type: 'number' } }, required: ['pid'] },
+      response: { 200: metricResponseSchema }
+    },
   }, async ({ params: { pid } }) => {
-    return typedFastify.mappedMetrics[pid]?.aggregated || {}
+    return typedFastify.mappedMetrics[pid]?.aggregated || emptyMetrics
   })
 
   typedFastify.get('/runtimes/:pid/metrics/:serviceId', {
     schema: {
-      params: { type: 'object', properties: { pid: { type: 'number' }, serviceId: { type: 'string' } }, required: ['pid', 'serviceId'] }
+      params: {
+        type: 'object',
+        properties: {
+          pid: { type: 'number' },
+          serviceId: { type: 'string' }
+        },
+        required: ['pid', 'serviceId']
+      },
+      response: { 200: metricResponseSchema }
     }
   }, async ({ params: { pid, serviceId } }) => {
-    return fastify.mappedMetrics[pid]?.services[serviceId] || {}
+    return fastify.mappedMetrics[pid]?.services[serviceId] || emptyMetrics
   })
 
   typedFastify.get('/runtimes/:pid/services', {
